# archive-handler

./: .pre-commit-config.yaml  README.md  pyproject.toml  pytest.benchmark.ini  requirements.txt  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: test_failure.md
.github/workflows/: ci.yml
docs/: CHANGELOG.md  README.md
docs/dev/: api.md  architecture.md  contributing.md  database.md  security.md
docs/user/: cli.md  commands.md  configuration.md  faq.md  installation.md  quickstart.md  troubleshooting.md  tutorials.md  usage.md
scripts/: __init__.py  verify_setup.py
telegram_archive_explorer/: __init__.py  archive_extractor.py  cli.py  config.py  data_importer.py  data_parser.py  database.py  logging_setup.py  scheduler.py  search.py  telegram_client.py
tests/: TESTING.md  __init__.py  conftest.py  factories.py  test_archive_extractor.py  test_basic.py  test_cli.py  test_database.py  test_integration.py  test_logging.py  test_performance.py  test_requirements.txt  test_scheduler.py  test_security.py  test_telegram_client.py  test_validation.py
